force-app/main/default/objects/Contact_Relationship__c/Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Associated Contacts</label>
    <nameField>
        <displayFormat>CRL-{00000}</displayFormat>
        <label>Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>