force-app/main/default/objects/Contact_Relationship__c/fields/Account_Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_Percentage__c</fullName>
    <label>Account Total Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>