force-app/main/default/objects/Contact_Relationship__c/fields/Administration_Type_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Administration_Type_Effective_Date__c</fullName>
    <label>Administration Type Effective Date</label>
    <type>Date</type>
</CustomField>