force-app/main/default/objects/Contact_Relationship__c/fields/Administrator_Liquidator_Record_Exists__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Liquidator_Record_Exists__c</fullName>
    <formula>IF( Account__r.Administrator_Liquidator_Record_Exists__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrator Liquidator Record Exists?</label>
    <type>Checkbox</type>
</CustomField>