force-app/main/default/objects/Contact_Relationship__c/fields/Administrator_Liquidator_Type__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Liquidator_Type__c</fullName>
    <description>Reason why Administrator/Liquidator has been appointed for</description>
    <label>Administrator/Liquidator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Administrator of a Deed of Company Arrangement (&quot;Deed Administrator&quot;)</fullName>
            </value>
            <value>
                <fullName>Administrator of a Scheme of Company Arrangement (&quot;Scheme Administrator&quot;)</fullName>
            </value>
            <value>
                <fullName>Administrator under Section 222(1) of the Aboriginal Land Rights Act 1983</fullName>
            </value>
            <value>
                <fullName>Controller (other than a receiver or managing controller)</fullName>
            </value>
            <value>
                <fullName>Involuntary liquidation</fullName>
            </value>
            <value>
                <fullName>Involuntary receiver</fullName>
            </value>
            <value>
                <fullName>Liquidator in a court ordered winding up</fullName>
            </value>
            <value>
                <fullName>Liquidator in a creditors voluntary winding up</fullName>
            </value>
            <value>
                <fullName>Liquidator in a member voluntary winding up</fullName>
            </value>
            <value>
                <fullName>Managing Controller (other than a receiver and manager)</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Receiver and Manager</fullName>
            </value>
            <value>
                <fullName>Voluntary Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>