force-app/main/default/objects/Contact_Relationship__c/fields/ASIC_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Registration_Number__c</fullName>
    <description>Administrator/Liquidator ASIC Registration Number</description>
    <label>ASIC Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>