force-app/main/default/objects/Contact_Relationship__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Administrator/Liquidator Name</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>