force-app/main/default/objects/Contact_Relationship__c/fields/ConfirmReplacingPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>ConfirmReplacingPrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By Creating this Primary Contact, this will end date the existing Primary Contact. If existing contact is still associated with Provider or Services, please add the contact with a different Role after clicking save</inlineHelpText>
    <label>Confirm Replacing Primary Contact</label>
    <type>Checkbox</type>
</CustomField>