force-app/main/default/objects/Contact_Relationship__c/fields/Contact_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Description__c</fullName>
    <description>Contact Description</description>
    <label>Contact Description</label>
    <type>TextArea</type>
</CustomField>