force-app/main/default/objects/Contact_Relationship__c/fields/Effect_on_Suitability__c.field-meta.xml
<CustomField>
    <fullName>Effect_on_Suitability__c</fullName>
    <label>Effect on Suitability</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>