force-app/main/default/objects/Contact_Relationship__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Administrator/Liquidator effective date</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>