force-app/main/default/objects/Contact_Relationship__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>Employer of key personnel</description>
    <inlineHelpText>Please enter company name</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>