force-app/main/default/objects/Contact_Relationship__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Fax number of contact</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>