force-app/main/default/objects/Contact_Relationship__c/fields/GPMS_Admin_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Admin_Is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Is Owner</label>
    <type>Checkbox</type>
</CustomField>