force-app/main/default/objects/Contact_Relationship__c/fields/GPMS_AdminBeKP__c.field-meta.xml
<CustomField>
    <fullName>GPMS_AdminBeKP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Administrator also be Key personnel.</description>
    <label>AdminBeKP</label>
    <type>Checkbox</type>
</CustomField>