force-app/main/default/objects/Contact_Relationship__c/fields/GPMS_AdminBeOwner__c.field-meta.xml
<CustomField>
    <fullName>GPMS_AdminBeOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Owner also be Key personnel.</description>
    <label>AdminBeOwner</label>
    <type>Checkbox</type>
</CustomField>