force-app/main/default/objects/Contact_Relationship__c/fields/Has_Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Duplicate_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Duplicate Contact</label>
    <type>Checkbox</type>
</CustomField>