force-app/main/default/objects/Contact_Relationship__c/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <formula>IF(ISBLANK(Oracle_Entity_Positions_ID__c),  Name ,&apos;CRL-&apos;+Text(Oracle_Entity_Positions_ID__c))</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>