force-app/main/default/objects/Contact_Relationship__c/fields/is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>is_Inactive__c</fullName>
    <formula>Today()&gt; End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Inactive</label>
    <type>Checkbox</type>
</CustomField>