force-app/main/default/objects/Contact_Relationship__c/fields/Main_Contact_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Indicator__c</fullName>
    <description>Indicates whether this contact is the main contact for the related entity</description>
    <label>Main Contact Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>