force-app/main/default/objects/Contact_Relationship__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Cell phone number of contact</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>