force-app/main/default/objects/Contact_Relationship__c/fields/NeedNewPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>NeedNewPrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need New Primary Contact</label>
    <type>Checkbox</type>
</CustomField>