force-app/main/default/objects/Contact_Relationship__c/fields/Oracle_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Contact_ID__c</fullName>
    <description>Migration ID - CONTACT_ID</description>
    <externalId>true</externalId>
    <label>Oracle Contact ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>