force-app/main/default/objects/Contact_Relationship__c/fields/Oracle_Entity_Positions_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Entity_Positions_ID__c</fullName>
    <description>Migration ID - ENTITY_POSITIONS_ID</description>
    <externalId>true</externalId>
    <label>Oracle Entity Positions ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>