force-app/main/default/objects/Contact_Relationship__c/fields/Oracle_Liquidator_Admin_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Liquidator_Admin_ID__c</fullName>
    <description>LIQUIDATOR_ADMINISTRATOR_ID</description>
    <label>Oracle Liquidator Admin ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>