force-app/main/default/objects/Contact_Relationship__c/fields/Organisation_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Contact_Type__c</fullName>
    <label>Organisation Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>