force-app/main/default/objects/Contact_Relationship__c/fields/Organisation_Contact_Unique__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Contact_Unique__c</fullName>
    <label>Organisation Contact Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>