force-app/main/default/objects/Contact_Relationship__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <description>Name of the organisation the consultant contact work with</description>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>