force-app/main/default/objects/Contact_Relationship__c/fields/Other_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Type__c</fullName>
    <inlineHelpText>If Other is selected, please enter the Branch or Department Name</inlineHelpText>
    <label>Other Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>