force-app/main/default/objects/Contact_Relationship__c/fields/Percentage_Owned__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Owned__c</fullName>
    <description>The percentage of ownership attributed to the owner</description>
    <label>Percentage Owned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>