force-app/main/default/objects/Contact_Relationship__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Landline number of contact</description>
    <inlineHelpText>Please enter a valid Australian phone number with area code or 1800/13 number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>