force-app/main/default/objects/Contact_Relationship__c/fields/Portal_Service_Roles__c.field-meta.xml
<CustomField>
    <fullName>Portal_Service_Roles__c</fullName>
    <label>Portal Service Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star Rating Reviewer - Service</fullName>
                <label>Star Rating Reviewer (Service)</label>
            </value>
            <value>
                <fullName>QI Role - Service</fullName>
                <label>QI Role (Service)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>