force-app/main/default/objects/Contact_Relationship__c/fields/Position_End_Comment__c.field-meta.xml
<CustomField>
    <fullName>Position_End_Comment__c</fullName>
    <label>Position End Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>