force-app/main/default/objects/Contact_Relationship__c/fields/Primary_Contact_Check__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact Check</label>
    <type>Checkbox</type>
</CustomField>