force-app/main/default/objects/Contact_Relationship__c/fields/Reason_for_Departure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Departure__c</fullName>
    <label>Reason for Departure</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>