force-app/main/default/objects/Contact_Relationship__c/fields/Registration_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Commencement_Date__c</fullName>
    <description>Administrator/Liquidator Registration Commencement Date</description>
    <label>Registration Commenced Date</label>
    <type>Date</type>
</CustomField>