force-app/main/default/objects/Contact_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Proportion of ownership</description>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Owned</fullName>
            </value>
            <value>
                <fullName>Partially Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>