force-app/main/default/objects/Contact_Relationship__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>(Generic NAPS Position Name) The role of this contact</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Contact</fullName>
            </value>
            <value>
                <fullName>Assessment Service Liaison</fullName>
            </value>
            <value>
                <fullName>Assessment Service Assessor</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Financial Management</fullName>
            </value>
            <value>
                <fullName>Funding Agreement Variations</fullName>
            </value>
            <value>
                <fullName>Funding Submissions</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>National Aboriginal and Torres Strait Islander Aged Care Program Contact</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Key Personnel</fullName>
            </value>
            <value>
                <fullName>General Staff</fullName>
            </value>
            <value>
                <fullName>Authorised Person</fullName>
            </value>
            <value>
                <fullName>Applicant Representative</fullName>
            </value>
            <value>
                <fullName>Liaison</fullName>
            </value>
            <value>
                <fullName>Assessment Service Leader</fullName>
            </value>
            <value>
                <fullName>Activity Contact</fullName>
            </value>
            <value>
                <fullName>Acquittal/Financial Reporting</fullName>
            </value>
            <value>
                <fullName>Assessment Service Administrator</fullName>
            </value>
            <value>
                <fullName>Assessment Service Delegate Support</fullName>
            </value>
            <value>
                <fullName>Assessment Service Delegate</fullName>
            </value>
            <value>
                <fullName>Choice Attributes</fullName>
            </value>
            <value>
                <fullName>Care Services Management</fullName>
            </value>
            <value>
                <fullName>Remittance/RCTI</fullName>
            </value>
            <value>
                <fullName>High level contact</fullName>
                <label>High Level Contact</label>
            </value>
            <value>
                <fullName>Service Monitoring &amp; Reports</fullName>
            </value>
            <value>
                <fullName>Centre Management</fullName>
            </value>
            <value>
                <fullName>Aged Care Service Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>