force-app/main/default/objects/Contact_Relationship__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <inlineHelpText>Please enter a valid mobile number or phone number with area code.</inlineHelpText>
    <label>Secondary Contact</label>
    <type>Phone</type>
</CustomField>