force-app/main/default/objects/Contact_Relationship__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>