force-app/main/default/objects/Contact_Relationship__c/fields/Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Service_Provided__c</fullName>
    <label>Service Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Application Form</fullName>
            </value>
            <value>
                <fullName>Developed policies and procedures</fullName>
            </value>
            <value>
                <fullName>Provided Advice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>