force-app/main/default/objects/Contact_Relationship__c/fields/Standard_Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Standard_Postal_Address__c</fullName>
    <description>Flag indicates whether the postal address is sourced from the linked entity. If not, a new postal address for the contact is entered.</description>
    <label>Standard Postal Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>