force-app/main/default/objects/Contact_Relationship__c/fields/Type_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Owner__c</fullName>
    <formula>&quot;Individual Owner&quot;</formula>
    <label>Type of Owner</label>
    <type>Text</type>
</CustomField>