force-app/main/default/objects/Contact_Relationship__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Web address of the contact</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>