force-app/main/default/objects/Contact_Relationship__c/recordTypes/Administrator_Liquidator_CR.recordType-meta.xml
<RecordType>
    <fullName>Administrator_Liquidator_CR</fullName>
    <active>true</active>
    <label>Administrator Liquidator</label>
</RecordType>