force-app/main/default/objects/Contact_Relationship__c/recordTypes/Consultant_CR.recordType-meta.xml
<RecordType>
    <fullName>Consultant_CR</fullName>
    <active>true</active>
    <label>Consultant</label>
</RecordType>