force-app/main/default/objects/Contact_Relationship__c/recordTypes/FinancialContactQFRACFR.recordType-meta.xml
<RecordType>
    <fullName>FinancialContactQFRACFR</fullName>
    <active>true</active>
    <label>FinancialContactQFRACFR</label>
</RecordType>