force-app/main/default/objects/Contact_Relationship__c/recordTypes/Key_Personnel_CR.recordType-meta.xml
<RecordType>
    <fullName>Key_Personnel_CR</fullName>
    <active>true</active>
    <label>Key Personnel</label>
</RecordType>