force-app/main/default/objects/Contact_Relationship__c/recordTypes/Non_Individual_Contact_CR.recordType-meta.xml
<RecordType>
    <fullName>Non_Individual_Contact_CR</fullName>
    <active>true</active>
    <label>Organisation Contact</label>
</RecordType>