force-app/main/default/objects/Contact_Relationship__c/recordTypes/Owner_CR.recordType-meta.xml
<RecordType>
    <fullName>Owner_CR</fullName>
    <active>true</active>
    <label>Individual Owner</label>
</RecordType>