force-app/main/default/objects/Contact_Relationship__c/recordTypes/Point_of_Contact_CR.recordType-meta.xml
<RecordType>
    <fullName>Point_of_Contact_CR</fullName>
    <active>true</active>
    <label>Point of Contact</label>
</RecordType>