force-app/main/default/objects/Contact_Relationship__c/recordTypes/SCR.recordType-meta.xml
<RecordType>
    <fullName>SCR</fullName>
    <active>true</active>
    <label>SCR</label>
</RecordType>