force-app/main/default/objects/Contact_Relationship__c/recordTypes/Service_Key_Personnel_CR.recordType-meta.xml
<RecordType>
    <fullName>Service_Key_Personnel_CR</fullName>
    <active>true</active>
    <label>Service Key Personnel</label>
</RecordType>