force-app/main/default/objects/Contact_Relationship__c/recordTypes/Service_Point_of_Contact_CR.recordType-meta.xml
<RecordType>
    <fullName>Service_Point_of_Contact_CR</fullName>
    <active>true</active>
    <label>Service Point of Contact</label>
</RecordType>