force-app/main/default/objects/Contact_Relationship__c/validationRules/Perm_Admin_Liq_Owner_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_Admin_Liq_Owner_Access</fullName>
    <active>true</active>
    <description>Administrator/Liquidator and Owner record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
OR(
RecordType.DeveloperName = &apos;Administrator_Liquidator_CR&apos;,
RecordType.DeveloperName = &apos;Owner_CR&apos;),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>