force-app/main/default/objects/Contact_Relationship__c/validationRules/Perm_AO_Acc_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AO_Acc_Access</fullName>
    <active>true</active>
    <description>Validation to restrict access to Account records which AO user has CRU access.</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
Account__r.RecordType.DeveloperName = &apos;Administrative_Organisation&apos;,
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator
))))</errorConditionFormula>
    <errorMessage>You do not have access to create/edit Administrative Organisation related records</errorMessage>
</ValidationRule>